--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 node_modules
-React Native Animated Tabs & Animated Indicator using FlatList
+ReactNative_Animated_Tabs&Animated_Indicator_using_FlatList
